edit media querry

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
                     engineering language for our staff to break-down,
                     find the best solutions and translate all solutions
                     into common language for you (the client) to
-                    relate better.</p>
-                <p>
+                    relate better.
+                    <br>
+                    <br>
                     We focus mainly on employing people that are
                     already employed by larger corporates and
                     government to help boost one’s income and
